--- a/Python_Set_Q2_Debug.ipynb
+++ b/Python_Set_Q2_Debug.ipynb
@@ -43,23 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "55520fd2",
+   "execution_count": null,
+   "id": "574a1dc1-edab-4207-8588-b5017d6401ed",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'x' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(x)\n\u001b[0;32m      6\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m----> 7\u001b[0m my_function()\n",
-      "Cell \u001b[1;32mIn[27], line 3\u001b[0m, in \u001b[0;36mmy_function\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmy_function\u001b[39m():\n\u001b[1;32m----> 3\u001b[0m     x \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(x)\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'x' where it is not associated with a value"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#2.Find the error in the following Python code:\n",
     "def my_function():\n",
@@ -67,7 +54,7 @@
     "    print(x)\n",
     "\n",
     "x = 10\n",
-    "my_function()\n"
+    "my_function()"
    ]
   },
   {
@@ -232,28 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "4a72685b",
+   "execution_count": null,
+   "id": "56b8e423-81bb-45a4-9138-d5df61c7a9c5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "not enough arguments for format string",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlice\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m age \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m25\u001b[39m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMy name is \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m and I am \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m years old\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (name))\n",
-      "\u001b[1;31mTypeError\u001b[0m: not enough arguments for format string"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#7.\n",
     "name = \"Alice\"\n",
     "age = 25\n",
-    "print(\"My name is %s and I am %d years old\" % (name))\n",
-    "\n"
+    "print(\"My name is %s and I am %d years old\" % (name))\n"
    ]
   },
   {
