--- a/Python_Set_Q1_Debug ..ipynb
+++ b/Python_Set_Q1_Debug ..ipynb
@@ -29,16 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "df3cee51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "#2.What will be the output of this code?\n",
     "\n",
     "a = 10\n",
     "b = \"5\"\n",
-    "print(a + b)\n",
+    "# print(a + b)\n",
     "\n",
     "# int+string its through an error, \n",
     "\n",
@@ -48,45 +56,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "15c2e7b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#3.What is the issue in this Python snippet?\n",
     "\n",
-    "def add_numbers(a, b) \n",
-    "     return a + b\n",
+    "# def add_numbers(a, b) \n",
+    "     # return a + b\n",
     "    \n",
     "# missing colon : after (a, b)\n",
-    "def add_number(a, b):\n"
+    "def add_numbers(a, b):\n",
+    "    return a+b\n",
+    "add_numbers(6, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f8e5efd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4.Identify the bug in the following Python code:\n",
+    "\n",
+    "# numbers = [1, 2, 3, 4]  \n",
+    "# print(numbers[4])\n",
+    "\n",
+    "# Index error list index out of range.\n",
+    "numbers = [1, 2, 3, 4]\n",
+    "print(numbers[3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2f8e5efd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#4.Identify the bug in the following Python code:\n",
-    "\n",
-    "numbers = [1, 2, 3, 4]  \n",
-    "print(numbers[4])\n",
-    "\n",
-    "# Index error list index out of range.\n",
-    "print(number[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "bc0080c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "#5.Find the error in the following Python code:\n",
-    "print \"Hello, World!\" \n",
+    "# print \"Hello, World!\" \n",
     "\n",
     "# () missing parentheses\n",
     "print(\"Hello, World!\")"
@@ -94,29 +132,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5b449ecb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#6.Find the error in the following Python code:\n",
-    "x = 5 / 0\n",
+    "# x = 5 / 0\n",
     "\n",
     "# Division error\n",
-    "X = 5/1 "
+    "X = 5/1 \n",
+    "print(int(X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "79260565",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  Alice Age:  25\n"
+     ]
+    }
+   ],
    "source": [
     "#7.Find the error in the following Python code:\n",
     "name = \"Alice\"\n",
     "age = 25\n",
-    "print(\"Name: \" + name + \", Age: \" + age)\n",
+    "# print(\"Name: \" + name + \", Age: \" + age)\n",
     "\n",
     "# instead of + opearator comma has to put on print Statement.\n",
     "print(\"Name: \", name, \"Age: \", age)"
@@ -124,14 +179,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3e4b6f3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "#8.Find the error\n",
-    "for i in range(1, 10, -1):\n",
-    "    print(i)\n",
+    "# for i in range(1, 10, -1):\n",
+    "#     print(i)\n",
     "    \n",
     "# error in range() function. range(start, stop, step) range start from 1 to 10 but here step value -1 is incorrect\n",
     "for i in range(10, 1, -1):\n",
@@ -140,34 +211,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "95976c4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "#9. Find the error in the following Python code:\n",
-    "x = 10\n",
-    "if x = 5:\n",
-    "    print(\"x is 5\")\n",
+    "# x = 10\n",
+    "# # if x = 5:\n",
+    "#     print(\"x is 5\")\n",
     "# error in operator should be comparison operator ==\n",
-    "if x==5:"
+    "x=10\n",
+    "if x==5:\n",
+    "    print(\"x is 5\")\n",
+    "else:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "317eca50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alice\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10. Identify the error in the following function definition:\n",
+    "\n",
+    "# def greet(name)\n",
+    "#     print(\"Hello, \" + name)\n",
+    "\n",
+    "# Colon missing after (name) \n",
+    "def greet(name):\n",
+    "    print(\"Hello, \" + name)\n",
+    "greet(name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "317eca50",
+   "id": "199d3ac3-02b2-4c4c-86c8-3a316304db89",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#10. Identify the error in the following function definition:\n",
-    "\n",
-    "def greet(name)\n",
-    "    print(\"Hello, \" + name)\n",
-    "\n",
-    "# Colon missing after (name) \n",
-    "def greet\"(name\"):"
-   ]
+   "source": []
   }
  ],
  "metadata": {
